@@ -2,9 +2,6 @@ package com.baidu.adp.lib.stats;
 
 import android.text.TextUtils;
 import com.baidu.adp.lib.util.BdLog;
-import com.baidu.ar.util.IoUtils;
-import com.baidu.searchbox.ng.ai.apps.network.BaseRequestAction;
-import com.baidu.webkit.internal.ETAG;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.ArrayList;
@@ -12,9 +9,9 @@ import java.util.Iterator;
 import org.apache.http.message.BasicNameValuePair;
 /* loaded from: classes.dex */
 public class a {
-    boolean DY;
-    private ArrayList<BasicNameValuePair> DZ;
-    private StringBuilder Ea;
+    boolean DX;
+    private ArrayList<BasicNameValuePair> DY;
+    private StringBuilder DZ;
     public long logID;
     private long mStartTime;
     public String mType;
@@ -23,11 +20,11 @@ public class a {
     public a(String str) {
         this.logID = 1L;
         this.sequenceID = -1L;
-        this.DY = false;
+        this.DX = false;
         this.mType = null;
-        this.Ea = new StringBuilder(100);
+        this.DZ = new StringBuilder(100);
         this.mType = str;
-        this.DY = false;
+        this.DX = false;
         this.logID = -1L;
         this.sequenceID = -1L;
     }
@@ -35,27 +32,27 @@ public class a {
     public a() {
         this.logID = 1L;
         this.sequenceID = -1L;
-        this.DY = false;
+        this.DX = false;
         this.mType = null;
-        this.Ea = new StringBuilder(100);
+        this.DZ = new StringBuilder(100);
     }
 
     public void c(Object obj, Object obj2) {
         if (obj != null && obj2 != null) {
-            if (this.DZ == null) {
-                this.DZ = new ArrayList<>();
+            if (this.DY == null) {
+                this.DY = new ArrayList<>();
             }
-            this.DZ.add(new BasicNameValuePair(obj.toString(), obj2.toString()));
+            this.DY.add(new BasicNameValuePair(obj.toString(), obj2.toString()));
         }
     }
 
     public String toString() {
         StringBuilder sb = new StringBuilder(200);
-        if (this.Ea.length() > 0) {
-            sb.append((CharSequence) this.Ea);
+        if (this.DZ.length() > 0) {
+            sb.append((CharSequence) this.DZ);
         }
-        if (this.DZ != null) {
-            Iterator<BasicNameValuePair> it = this.DZ.iterator();
+        if (this.DY != null) {
+            Iterator<BasicNameValuePair> it = this.DY.iterator();
             while (it.hasNext()) {
                 BasicNameValuePair next = it.next();
                 if (!TextUtils.isEmpty(next.getName()) && !TextUtils.isEmpty(next.getValue())) {
@@ -65,10 +62,10 @@ public class a {
                     sb.append(next.getName());
                     sb.append('=');
                     try {
-                        sb.append(URLEncoder.encode(aW(next.getValue()), IoUtils.UTF_8));
+                        sb.append(URLEncoder.encode(aX(next.getValue()), "utf-8"));
                     } catch (UnsupportedEncodingException e) {
                         BdLog.e(e);
-                        sb.append(aW(next.getValue()));
+                        sb.append(aX(next.getValue()));
                     }
                 }
             }
@@ -91,29 +88,29 @@ public class a {
             if (TextUtils.isEmpty(str2)) {
                 str2 = "";
             }
-            if (this.Ea.length() > 0) {
-                this.Ea.append('&');
+            if (this.DZ.length() > 0) {
+                this.DZ.append('&');
             }
-            this.Ea.append(str);
-            this.Ea.append(ETAG.EQUAL);
+            this.DZ.append(str);
+            this.DZ.append("=");
             try {
-                this.Ea.append(URLEncoder.encode(aW(str2), IoUtils.UTF_8));
+                this.DZ.append(URLEncoder.encode(aX(str2), "utf-8"));
             } catch (Throwable th) {
                 BdLog.e(th);
-                this.Ea.append(aW(str2));
+                this.DZ.append(aX(str2));
             }
         }
     }
 
-    public void startTimer() {
+    public void jL() {
         this.mStartTime = System.currentTimeMillis();
     }
 
-    public long jK() {
+    public long jM() {
         return System.currentTimeMillis() - this.mStartTime;
     }
 
-    public static String aW(String str) {
-        return str.replace(" ", BaseRequestAction.SPLITE).replace("[", "(").replace("]", ")").replace(ETAG.ITEM_SEPARATOR, "|");
+    public static String aX(String str) {
+        return str.replace(" ", "_").replace("[", "(").replace("]", ")").replace("&", "|");
     }
 }
