@@ -2,18 +2,14 @@ package com.baidu.adp.lib.stats.upload;
 
 import android.text.TextUtils;
 import com.baidu.adp.lib.util.BdLog;
-import com.baidu.ar.constants.HttpConstants;
-import com.baidu.ar.statistic.StatisticConstants;
-import com.baidu.ar.util.IoUtils;
 import com.baidu.sapi2.passhost.pluginsdk.service.ISapiAccount;
-import com.baidu.webkit.internal.ETAG;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.HashMap;
 /* loaded from: classes.dex */
 class c {
     public static String a(com.baidu.adp.lib.stats.base.a aVar, com.baidu.adp.lib.stats.c cVar) {
-        if (aVar.kh() != null && (aVar.kh().equals("omp") || aVar.kh().equals("mon"))) {
+        if (aVar.kj() != null && (aVar.kj().equals("omp") || aVar.kj().equals("mon"))) {
             return a(cVar);
         }
         return a(true, cVar);
@@ -23,19 +19,19 @@ class c {
         HashMap<String, Object> hashMap = new HashMap<>();
         a(hashMap, "_client_type", "2");
         a(hashMap, "_client_version", cVar.mAppVersion);
-        a(hashMap, "_phone_imei", cVar.Eh);
-        a(hashMap, "_client_id", cVar.Ee);
-        a(hashMap, "subapp_type", cVar.Ei);
+        a(hashMap, "_phone_imei", cVar.Eg);
+        a(hashMap, "_client_id", cVar.Ed);
+        a(hashMap, "subapp_type", cVar.Eh);
         a(hashMap, "from", cVar.mChannel);
-        a(hashMap, ETAG.KEY_NET_TYPE, cVar.Em);
+        a(hashMap, "net_type", cVar.El);
         a(hashMap, "cuid", cVar.mCuid);
-        a(hashMap, "model", cVar.Ej);
+        a(hashMap, "model", cVar.Ei);
         if (TextUtils.isEmpty(cVar.mUid)) {
             cVar.mUid = "0";
         }
         a(hashMap, "uid", cVar.mUid);
-        a(hashMap, "un", cVar.Ek);
-        a(hashMap, "BDUSS", cVar.El);
+        a(hashMap, "un", cVar.Ej);
+        a(hashMap, "BDUSS", cVar.Ek);
         if (z) {
             a(hashMap, "find_bug", "2");
         } else {
@@ -57,74 +53,74 @@ class c {
         StringBuilder sb = new StringBuilder();
         try {
             sb.append("product");
-            sb.append(ETAG.EQUAL);
-            sb.append(URLEncoder.encode(cVar.Eb, IoUtils.UTF_8));
-            sb.append(ETAG.ITEM_SEPARATOR);
+            sb.append("=");
+            sb.append(URLEncoder.encode(cVar.Ea, "utf-8"));
+            sb.append("&");
             sb.append("sub_sys");
-            sb.append(ETAG.EQUAL);
-            sb.append(URLEncoder.encode(cVar.Ec, IoUtils.UTF_8));
-            sb.append(ETAG.ITEM_SEPARATOR);
+            sb.append("=");
+            sb.append(URLEncoder.encode(cVar.Eb, "utf-8"));
+            sb.append("&");
             sb.append("version");
-            sb.append(ETAG.EQUAL);
-            sb.append(URLEncoder.encode(cVar.mAppVersion, IoUtils.UTF_8));
-            sb.append(ETAG.ITEM_SEPARATOR);
+            sb.append("=");
+            sb.append(URLEncoder.encode(cVar.mAppVersion, "utf-8"));
+            sb.append("&");
             sb.append("os");
-            sb.append(ETAG.EQUAL);
-            sb.append(HttpConstants.OS_TYPE_VALUE);
-            sb.append(ETAG.ITEM_SEPARATOR);
-            sb.append(StatisticConstants.OS_VERSION);
-            sb.append(ETAG.EQUAL);
-            sb.append(URLEncoder.encode(cVar.En, IoUtils.UTF_8));
+            sb.append("=");
+            sb.append("android");
+            sb.append("&");
+            sb.append("os_version");
+            sb.append("=");
+            sb.append(URLEncoder.encode(cVar.Em, "utf-8"));
             if (!TextUtils.isEmpty(cVar.mChannel)) {
-                sb.append(ETAG.ITEM_SEPARATOR);
+                sb.append("&");
                 sb.append("from");
-                sb.append(ETAG.EQUAL);
-                sb.append(URLEncoder.encode(cVar.mChannel, IoUtils.UTF_8));
+                sb.append("=");
+                sb.append(URLEncoder.encode(cVar.mChannel, "utf-8"));
+            }
+            if (!TextUtils.isEmpty(cVar.Ec)) {
+                sb.append("&");
+                sb.append("cfrom");
+                sb.append("=");
+                sb.append(URLEncoder.encode(cVar.Ec, "utf-8"));
+            }
+            sb.append("&");
+            sb.append(ISapiAccount.SAPI_ACCOUNT_PHONE);
+            sb.append("=");
+            sb.append(URLEncoder.encode(cVar.Ei, "utf-8"));
+            if (!TextUtils.isEmpty(cVar.mUid)) {
+                sb.append("&");
+                sb.append("uid");
+                sb.append("=");
+                sb.append(URLEncoder.encode(cVar.mUid, "utf-8"));
             }
             if (!TextUtils.isEmpty(cVar.Ed)) {
-                sb.append(ETAG.ITEM_SEPARATOR);
-                sb.append("cfrom");
-                sb.append(ETAG.EQUAL);
-                sb.append(URLEncoder.encode(cVar.Ed, IoUtils.UTF_8));
-            }
-            sb.append(ETAG.ITEM_SEPARATOR);
-            sb.append(ISapiAccount.SAPI_ACCOUNT_PHONE);
-            sb.append(ETAG.EQUAL);
-            sb.append(URLEncoder.encode(cVar.Ej, IoUtils.UTF_8));
-            if (!TextUtils.isEmpty(cVar.mUid)) {
-                sb.append(ETAG.ITEM_SEPARATOR);
-                sb.append("uid");
-                sb.append(ETAG.EQUAL);
-                sb.append(URLEncoder.encode(cVar.mUid, IoUtils.UTF_8));
-            }
-            if (!TextUtils.isEmpty(cVar.Ee)) {
-                sb.append(ETAG.ITEM_SEPARATOR);
+                sb.append("&");
                 sb.append("client_id");
-                sb.append(ETAG.EQUAL);
-                sb.append(URLEncoder.encode(cVar.Ee, IoUtils.UTF_8));
+                sb.append("=");
+                sb.append(URLEncoder.encode(cVar.Ed, "utf-8"));
             }
-            if (!TextUtils.isEmpty(cVar.Eh)) {
-                sb.append(ETAG.ITEM_SEPARATOR);
+            if (!TextUtils.isEmpty(cVar.Eg)) {
+                sb.append("&");
                 sb.append("imei");
-                sb.append(ETAG.EQUAL);
-                sb.append(URLEncoder.encode(cVar.Eh, IoUtils.UTF_8));
+                sb.append("=");
+                sb.append(URLEncoder.encode(cVar.Eg, "utf-8"));
             }
-            if (!TextUtils.isEmpty(cVar.Ek)) {
-                sb.append(ETAG.ITEM_SEPARATOR);
+            if (!TextUtils.isEmpty(cVar.Ej)) {
+                sb.append("&");
                 sb.append("uname");
-                sb.append(ETAG.EQUAL);
-                sb.append(URLEncoder.encode(cVar.Ek, IoUtils.UTF_8));
+                sb.append("=");
+                sb.append(URLEncoder.encode(cVar.Ej, "utf-8"));
             }
             if (!TextUtils.isEmpty(cVar.mCuid)) {
-                sb.append(ETAG.ITEM_SEPARATOR);
+                sb.append("&");
                 sb.append("cuid");
-                sb.append(ETAG.EQUAL);
-                sb.append(URLEncoder.encode(cVar.mCuid, IoUtils.UTF_8));
+                sb.append("=");
+                sb.append(URLEncoder.encode(cVar.mCuid, "utf-8"));
             }
-            sb.append(ETAG.ITEM_SEPARATOR);
+            sb.append("&");
             sb.append("net");
-            sb.append(ETAG.EQUAL);
-            sb.append(URLEncoder.encode(cVar.mNetType, IoUtils.UTF_8));
+            sb.append("=");
+            sb.append(URLEncoder.encode(cVar.mNetType, "utf-8"));
         } catch (UnsupportedEncodingException e) {
             BdLog.e(e);
         }
@@ -135,9 +131,9 @@ class c {
         if (sb != null && !TextUtils.isEmpty(str)) {
             try {
                 String str3 = TextUtils.isEmpty(str2) ? "" : str2;
-                StringBuilder append = sb.append(ETAG.ITEM_SEPARATOR).append(str).append(ETAG.EQUAL);
+                StringBuilder append = sb.append("&").append(str).append("=");
                 if (z) {
-                    str3 = URLEncoder.encode(str3, IoUtils.UTF_8);
+                    str3 = URLEncoder.encode(str3, "utf-8");
                 }
                 append.append(str3);
             } catch (Exception e) {
@@ -153,21 +149,21 @@ class c {
         StringBuilder sb = new StringBuilder();
         sb.append("_client_type=2");
         a(sb, "_client_version", cVar.mAppVersion, z);
-        a(sb, "_phone_imei", cVar.Eh, z);
-        a(sb, "_client_id", cVar.Ee, z);
-        a(sb, "subapp_type", cVar.Ei, z);
-        a(sb, StatisticConstants.OS_VERSION, cVar.En, z);
+        a(sb, "_phone_imei", cVar.Eg, z);
+        a(sb, "_client_id", cVar.Ed, z);
+        a(sb, "subapp_type", cVar.Eh, z);
+        a(sb, "os_version", cVar.Em, z);
         a(sb, "from", cVar.mChannel, z);
-        a(sb, "cfrom", cVar.Ed, z);
-        a(sb, ETAG.KEY_NET_TYPE, cVar.Em, z);
+        a(sb, "cfrom", cVar.Ec, z);
+        a(sb, "net_type", cVar.El, z);
         a(sb, "cuid", cVar.mCuid, z);
-        a(sb, "model", cVar.Ej, z);
+        a(sb, "model", cVar.Ei, z);
         if (TextUtils.isEmpty(cVar.mUid)) {
             a(sb, "uid", "0", z);
         } else {
             a(sb, "uid", cVar.mUid, z);
         }
-        a(sb, "un", cVar.Ek, z);
+        a(sb, "un", cVar.Ej, z);
         return sb.toString();
     }
 }
