@@ -5,15 +5,13 @@ import com.baidu.adp.lib.util.BdLog;
 import com.baidu.adp.lib.util.j;
 import com.baidu.adp.lib.util.s;
 import com.baidu.android.common.util.DeviceId;
-import com.baidu.fsg.base.BaiduRimConstants;
 import com.baidu.sapi2.passhost.pluginsdk.service.ISapiAccount;
 import com.baidu.tbadk.TbConfig;
 import com.baidu.tbadk.core.TbadkCoreApplication;
 import com.baidu.tbadk.core.a.a;
 import com.baidu.tbadk.core.util.UtilHelper;
-import com.baidu.tbadk.core.util.ao;
+import com.baidu.tbadk.core.util.ap;
 import com.baidu.tbadk.core.util.x;
-import com.baidu.webkit.internal.ETAG;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.ArrayList;
@@ -21,48 +19,49 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import org.apache.http.message.BasicNameValuePair;
+import org.apache.http.protocol.HTTP;
 import org.json.JSONObject;
 /* loaded from: classes.dex */
 public class d {
     public static a.b a(a.b bVar) {
         a.b bVar2;
-        String[] bdx;
+        String[] bEa;
         if (bVar == null) {
             return null;
         }
         try {
-            bdx = bdx();
+            bEa = bEa();
         } catch (Exception e) {
             BdLog.e(e.getMessage());
         }
-        if (bdx != null) {
+        if (bEa != null) {
             ArrayList<BasicNameValuePair> arrayList = new ArrayList<>();
             arrayList.add(new BasicNameValuePair("crypttype", "1"));
-            arrayList.add(new BasicNameValuePair(BaiduRimConstants.TPL_INIT_KEY, TbConfig.PassConfig.TPL));
+            arrayList.add(new BasicNameValuePair("tpl", TbConfig.PassConfig.TPL));
             arrayList.add(new BasicNameValuePair("appid", "1"));
             arrayList.add(new BasicNameValuePair("clientip", getClientIP()));
-            arrayList.add(new BasicNameValuePair("cert_id", bdx[0]));
+            arrayList.add(new BasicNameValuePair("cert_id", bEa[0]));
             JSONObject jSONObject = new JSONObject();
-            jSONObject.put("bduss", bVar.El);
-            jSONObject.put(ISapiAccount.SAPI_ACCOUNT_PTOKEN, bVar.aoS);
+            jSONObject.put("bduss", bVar.Ek);
+            jSONObject.put(ISapiAccount.SAPI_ACCOUNT_PTOKEN, bVar.bvB);
             jSONObject.put("cuid", DeviceId.getDeviceID(TbadkCoreApplication.getInst().getApp()));
             jSONObject.put("clientid", TbadkCoreApplication.getInst().getImei());
-            arrayList.add(new BasicNameValuePair("userinfo", new com.baidu.tbadk.core.a.c().encrypt(bdx[1], jSONObject.toString())));
+            arrayList.add(new BasicNameValuePair("userinfo", new com.baidu.tbadk.core.a.c().encrypt(bEa[1], jSONObject.toString())));
             arrayList.add(new BasicNameValuePair("sig", c(arrayList, TbConfig.PassConfig.ENC_KEY)));
             x xVar = new x(TbConfig.PassConfig.LOGIN_BDUSS_URL);
-            xVar.Dw().Eu().mIsNeedAddCommenParam = false;
-            xVar.Dw().Eu().mIsUseCurrentBDUSS = false;
-            xVar.p(arrayList);
-            xVar.Dw().Eu().Ex().aEv = true;
-            xVar.Dw().Eu().Ex().mIsBaiduServer = false;
-            String CY = xVar.CY();
-            if (xVar.Dw().Ev().isRequestSuccess() && !ao.isEmpty(CY)) {
-                JSONObject jSONObject2 = new JSONObject(CY);
+            xVar.acH().adF().mIsNeedAddCommenParam = false;
+            xVar.acH().adF().mIsUseCurrentBDUSS = false;
+            xVar.r(arrayList);
+            xVar.acH().adF().adI().bMp = true;
+            xVar.acH().adF().adI().mIsBaiduServer = false;
+            String acj = xVar.acj();
+            if (xVar.acH().adG().isRequestSuccess() && !ap.isEmpty(acj)) {
+                JSONObject jSONObject2 = new JSONObject(acj);
                 if ("0".equals(jSONObject2.optString("errno"))) {
                     bVar2 = new a.b();
-                    bVar2.El = jSONObject2.optString("bduss");
-                    bVar2.aoS = jSONObject2.optString(ISapiAccount.SAPI_ACCOUNT_PTOKEN);
-                    bVar2.aoT = jSONObject2.optString("uname");
+                    bVar2.Ek = jSONObject2.optString("bduss");
+                    bVar2.bvB = jSONObject2.optString(ISapiAccount.SAPI_ACCOUNT_PTOKEN);
+                    bVar2.bvC = jSONObject2.optString("uname");
                     return bVar2;
                 }
             }
@@ -72,12 +71,12 @@ public class d {
         return null;
     }
 
-    private static String[] bdx() {
+    private static String[] bEa() {
         try {
             x xVar = new x(TbConfig.PassConfig.GET_CERT_URL);
-            xVar.Dw().Eu().mIsNeedAddCommenParam = false;
-            xVar.Dw().Eu().mIsUseCurrentBDUSS = false;
-            JSONObject jSONObject = new JSONObject(new String(xVar.CZ()));
+            xVar.acH().adF().mIsNeedAddCommenParam = false;
+            xVar.acH().adF().mIsUseCurrentBDUSS = false;
+            JSONObject jSONObject = new JSONObject(new String(xVar.ack()));
             return new String[]{jSONObject.optString("cert_id"), jSONObject.optString("cert")};
         } catch (Exception e) {
             return null;
@@ -85,7 +84,7 @@ public class d {
     }
 
     private static String getClientIP() {
-        if (j.kW()) {
+        if (j.kZ()) {
             return UtilHelper.getWifiMac(TbadkCoreApplication.getInst().getApp());
         }
         return UtilHelper.getGprsIpAddress();
@@ -105,16 +104,16 @@ public class d {
         while (it.hasNext()) {
             String str2 = (String) it.next();
             stringBuffer.append(str2);
-            stringBuffer.append(ETAG.EQUAL);
+            stringBuffer.append("=");
             try {
                 String str3 = (String) hashMap.get(str2);
                 if (!TextUtils.isEmpty(str3)) {
-                    stringBuffer.append(URLEncoder.encode(str3, "UTF-8"));
+                    stringBuffer.append(URLEncoder.encode(str3, HTTP.UTF_8));
                 }
             } catch (UnsupportedEncodingException e) {
                 BdLog.e(e.getMessage());
             }
-            stringBuffer.append(ETAG.ITEM_SEPARATOR);
+            stringBuffer.append("&");
         }
         stringBuffer.append("sign_key=" + str);
         return s.bC(stringBuffer.toString());
